--- a/settings/v2/packages/project.json
+++ b/settings/v2/packages/project.json
@@ -5,5 +5,24 @@
       "width": 960,
       "height": 640
     }
-  }
+  },
+  "physics": {
+    "collisionGroups": [
+      {
+        "index": 2,
+        "name": "Ball"
+      },
+      {
+        "index": 3,
+        "name": "Peg"
+      }
+    ],
+    "collisionMatrix": {
+      "0": 1,
+      "1": 0,
+      "2": 8,
+      "3": 4
+    }
+  },
+  "layer": []
 }
